# clawgrep

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  OPENCLAW.md  README.md  SECURITY.md
.github/workflows/: build-win-arm.yml  ci.yml  release.yml
bindings/node/: Cargo.toml  cli.js  index.d.ts  index.js  package-lock.json  package.json
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
scripts/: release.sh
src/: cache.rs  cli.rs  config.rs  embed.rs  index.rs  keyword.rs  lib.rs  main.rs  search.rs
tests/: cache.rs  chunking.rs  cli.rs  discovery.rs  keyword.rs  search.rs
tests/common/: mod.rs
