[workspace]
members = [".", "bindings/node", "bindings/python"]

[package]
name = "clawgrep"
version = "0.1.2"
edition = "2021"
description = "Grep-like CLI with hybrid semantic and keyword search."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schonhoffer/clawgrep"
readme = "README.md"

[[bin]]
name = "clawgrep"
path = "src/main.rs"

[lib]
name = "clawgrep"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
ignore = "0.4"
rayon = "1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
dirs = "5"
tract-onnx = "0.22.1"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["rustls-tls", "ureq"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
junction = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
