[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clawgrep"
version = "0.1.0"
description = "AI grep — search files by meaning, not pattern"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
clawgrep = "clawgrep:_cli_main"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "clawgrep"
